[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "miniflow"
version = "0.1.0"
description = "async flow scheduler"
requires-python = ">=3.8"
dependencies = [
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
